--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,13 @@ body {
   margin-top: 25px;
 }
 
-#matches {
+.row {
   display: flex;
+  justify-content: center;
+}
+
+.row:first-of-type {
+  background-color: #aaa;
 }
 
 #left-column,
@@ -20,12 +25,15 @@ body {
   flex-direction: column;
 }
 
+#left-column.noMatch {
+  display: none;
+}
+
 #current-match {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  background-color: #aaa;
 }
 
 #current-match-wrapper h3 {
@@ -80,6 +88,9 @@ body {
   transform: translateX(-140px);
 }
 
+#new-match {
+  margin-bottom: 40px;
+}
 
 #new-match label {
   margin-top: 10px;
@@ -127,6 +138,7 @@ body {
   text-align: center;
   width: 40%;
   padding-right: 40px;
+  margin-bottom: 40px;
 }
 
 #match-list button {
